agregando input y boton AGREGAR PALABRA

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
 		</header>	
 		
 		<main>
+			<div class="input-text">
+				<input type="text" id="input"  placeholder="Escriba una nueva palabra">
+
+				<button id="btn-agregar" class="button-71" role="button">AGREGAR PALABRA</button>
+			</div>
+
 			<div class="pantalla">
-                <canvas width="800" height="600"></canvas>
+                <canvas width="1200" height="800"></canvas>
             </div>
 		</main>
 
