proyecto terminado version 1

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 		</header>	
 		
 		<main>
-			<div class="input-text">
-				<input type="text" id="input"  placeholder="Escriba una nueva palabra">
-
+			<div id="input-text">
 				<button id="btn-agregar" class="button-71" role="button">AGREGAR PALABRA</button>
+				<input type="text" id="agregar-palabra" placeholder="Escriba una nueva palabra">
 			</div>
-
 			<div class="pantalla">
                 <canvas width="1200" height="800"></canvas>
             </div>
