se añade pie de pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>ALURA CHALLENGE - ORACLE ONE - JUEGO AHORCADO</title>
-		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	</head>
 
@@ -27,6 +27,12 @@
                 <canvas width="1200" height="800"></canvas>
             </div>
 		</main>
+
+		<footer>
+            <div class="pie-pagina">
+                <span>Desarrollado por Fabian Rodriguez 2022</span>
+            </div>
+        </footer>
 
         <script src="js/canvas.js"></script>
         <script src="js/script.js"></script>
